kubernetes/apps/rook-ceph/rook-ceph/cluster/toolbox.yaml
---
# disable ssl: ceph config set mgr mgr/dashboard/ssl false
# wipe drive:
#           securityContext:
#             allowPrivilegeEscalation: true
#             privileged: true
#
#           volumeMounts:
#             - name: dev
#               mountPath: /dev/nvme0n1
#
#           volumes:
#             - name: dev
#               hostPath:
#                 path: /dev/nvme0n1
#
#        run: sgdisk --zap-all /dev/nvme0n1
#
# if you want to replace an already existing osd with a new drive or device you need to run
# follow this guide: https://rathpc.github.io/rook.github.io/docs/rook/v1.4/ceph-osd-mgmt.html#remove-an-osd
# (ERROR: entity osd.x exists but key does not match)
#     run: ceph auth del osd.x
#
# ceph clear osd flags
#     run: ceph osd rm-noin 3
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rook-ceph-tools
  namespace: rook-ceph # namespace:cluster
  labels:
    app: rook-ceph-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rook-ceph-tools
  template:
    metadata:
      labels:
        app: rook-ceph-tools
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: rook-ceph-tools
          image: quay.io/ceph/ceph:v17.2.5
          command:
            - /bin/bash
            - -c
            - |
              [...]
          imagePullPolicy: IfNotPresent
          tty: true
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            # runAsNonRoot: true
            # runAsUser: 2016
            # runAsGroup: 2016
          volumeMounts:
            - mountPath: /etc/ceph
              name: ceph-config
            - name: mon-endpoint-volume
              mountPath: /etc/rook
            - name: dev
              mountPath: /dev/disk
            - name: class
              mountPath: /sys/class
      volumes:
        - name: mon-endpoint-volume
          configMap:
            name: rook-ceph-mon-endpoints
            items:
              - key: data
                path: mon-endpoints
        - name: ceph-config
          emptyDir: {}
        - name: dev
          hostPath:
            path: /dev/disk
        - name: class
          hostPath:
            path: /sys/class
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: serber-pc
