kubernetes/apps/rook-ceph/rook-ceph/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  labels:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/appName: "Rook"
    hajimari.io/icon: mdi:chess-rook
    hajimari.io/enable: "true"
    app.kubernetes.io/instance: rook-ceph-mgr-dashboard
    app.kubernetes.io/name: rook-ceph-mgr-dashboard
spec:
  ingressClassName: "nginx"
  rules:
    - host: "rook.${LOCAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: http-dashboard
  tls:
    - hosts:
        - "rook.${LOCAL_DOMAIN}"
